--- a/style/display_products.css
+++ b/style/display_products.css
@@ -3,13 +3,13 @@ body {
 }
 
 .product {
-  display: inline-block;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   flex-direction: row;
-  padding-left: 8%;
-  gap: 10px;
+  /* padding-left: 8%; */
+  gap: 20px;
   margin-right: 2px;
-
   margin-bottom: 20px;
   position: absolute;
   top: 9%;
@@ -23,8 +23,9 @@ body {
 
 .product p {
   font-size: 16px;
-  margin: 3px;
+  margin: 1px;
 }
+
 img {
   display: inline-block;
   padding-left: 3%; /*this both padding for space between image*/
@@ -39,7 +40,7 @@ img {
   display: inline-block;
   justify-content: space-evenly;
   width: 300px;
-  height: 365px;
+  /* height: 365px; */
   gap: 20px;
   padding-left: 2%;
   padding-top: 2%;
@@ -47,15 +48,15 @@ img {
 .card-bodyData {
   /* border: 1px blue solid; */
   display: flex;
-  justify-items: center;
+  justify-content: space-evenly;
   flex-direction: column;
   /* border: 1px blue solid; */
   border-radius: 20px;
   background-color: #f3b8d0;
   max-width: 270px;
-  max-height: 360px;
+  height: 380px;
   align-items: center;
-  gap: 0px;
+  padding: 5%;
 }
 
 .main {
@@ -68,7 +69,10 @@ img {
   display: inline-block;
   justify-content: center;
   align-items: center;
+  aspect-ratio: 1/1;
+  border-radius: 20px;
 }
+
 .imgCenter {
   display: inline-block;
   justify-content: center;
@@ -79,4 +83,15 @@ img {
   display: flex;
   flex-direction: column;
   margin-left: 40px;
+}
+
+.buttonCenter {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buyButton {
+  width: 100px;
 }
