--- a/style/navbar.css
+++ b/style/navbar.css
@@ -7,4 +7,17 @@ body {
   padding: 0%;
   margin: 0%;
 }
+
 /* Your custom background color class */
+.mainNavbar {
+  padding: 0px;
+}
+
+.bg-body-tertiary {
+  background-color: #cc2783 !important;
+}
+
+.navbar .container-fluid {
+  z-index: 1;
+  background-color: #cc2783;
+}
